--- a/systrace/systrace/prefix.html
+++ b/systrace/systrace/prefix.html
@@ -25,6 +25,11 @@
     outline: none;
   }
 </style>
+
+<!-- WebComponent V0 polyfill. See https://crbug.com/1036492 -->
+<script>
+{{WEBCOMPONENTS_V0_POLYFILL_JS}}
+</script>
 {{SYSTRACE_TRACE_VIEWER_HTML}}
 </head>
 <body>
