trace-viewer: Add polyfill to systrace viewer
Bug: chromium:1036492
Change-Id: Iaa143b44d98fe6a8b577517e2c208729b4f47852

--- a/systrace/systrace/prefix.html
+++ b/systrace/systrace/prefix.html
@@ -25,6 +25,12 @@
     outline: none;
   }
 </style>
+
+<!-- WebComponent V0 polyfill. See https://crbug.com/1036492 -->
+<script>
+'use strict';
+{{WEBCOMPONENTS_V0_POLYFILL_JS}}
+</script>
 {{SYSTRACE_TRACE_VIEWER_HTML}}
 </head>
 <body>
