monorail_project_id integration with Chrome Perf Dashboard UI.
Change-Id: I96f11a20602362dd8043a06d37ef52a4386715ae

--- a/dashboard/dashboard/elements/triage-dialog.html
+++ b/dashboard/dashboard/elements/triage-dialog.html
@@ -117,8 +117,8 @@ on an alert, or clicks on a "triage" button on the alerts page. It allows the
 
     <div id="toasts" hidden>
       <div id="jobsubmitted">
-        Bug <a href="http://crbug.com/{{lastSubmittedBugId}}"
-               target="_blank">{{lastSubmittedBugId}}</a> created/updated.
+        Bug <a href="http://crbug.com/{{lastSubmittedProjectId}}/{{lastSubmittedBugId}}"
+               target="_blank">{{lastSubmittedProjectId}}:{{lastSubmittedBugId}}</a> created/updated.
         <template is="dom-if" if="{{!!lastSubmittedTryJobId}}">
           Bisect job <a href="{{lastSubmittedTryJobUrl}}"
                         target="_blank">{{lastSubmittedTryJobId}}</a> started.
@@ -150,6 +150,10 @@ Polymer({
     lastSubmittedBugId: {
       type: Number,
       value: 0
+    },
+    lastSubmittedProjectId: {
+      type: String,
+      value: ''
     },
     lastSubmittedTryJobId: {
       type: Number,
@@ -197,7 +201,8 @@ Polymer({
         this.close();
         this.fire('triaged', {
           'alerts': this.alerts,
-          'bugid': data.bug_id
+          'bugid': data.bug_id,
+          'projectid': data.project_id
         });
         e.preventDefault();
         e.stopPropagation();
@@ -213,6 +218,7 @@ Polymer({
     */
   showCreatedBugResult(data) {
     this.lastSubmittedBugId = data.bug_id;
+    this.lastSubmittedProjectId = data.project_id;
     this.lastSubmittedTryJobId = data.issue_id;
     this.lastSubmittedTryJobUrl = data.issue_url;
     this.lastSubmittedTryJobError = data.bisect_error;
