--- a/tracing/tracing/metrics/blink/gc_metric.html
+++ b/tracing/tracing/metrics/blink/gc_metric.html
@@ -134,8 +134,7 @@ tr.exportTo('tr.metrics.blink', function() {
   function
   isNonForcedBlinkGarbageCollectionMarkingTransitiveColsureEvent(event) {
     return BLINK_GC_FOREGROUND_MARKING_TRANSITIVE_CLOSURE_EVENTS.includes(
-        event.title) &&
-           isNonForcedEvent(event);
+        event.title) && isNonForcedEvent(event);
   }
 
   function
@@ -193,51 +192,20 @@ tr.exportTo('tr.metrics.blink', function() {
 
   tr.metrics.MetricRegistry.register(blinkGcMetric);
 
-  const timeDurationInMs_smallerIsBetter =
-      tr.b.Unit.byName.timeDurationInMs_smallerIsBetter;
-
   // 0.1 steps from 0 to 20 since it is the most common range.
   // Exponentially increasing steps from 20 to 200.
   const CUSTOM_BOUNDARIES = tr.v.HistogramBinBoundaries.createLinear(0, 20, 200)
       .addExponentialBins(200, 100);
 
-  function createNumericForTopEventTime(name) {
+  function createNumericForEventTime(name) {
     const n = new tr.v.Histogram(name,
-        timeDurationInMs_smallerIsBetter, CUSTOM_BOUNDARIES);
+        tr.b.Unit.byName.timeDurationInMs_smallerIsBetter, CUSTOM_BOUNDARIES);
     n.customizeSummaryOptions({
       avg: true,
       count: true,
       max: true,
-      min: false,
+      min: true,
       std: true,
-      sum: true,
-      percentile: [0.90]});
-    return n;
-  }
-
-  function createNumericForTotalEventTime(name) {
-    const n = new tr.v.Histogram(name,
-        timeDurationInMs_smallerIsBetter, CUSTOM_BOUNDARIES);
-    n.customizeSummaryOptions({
-      avg: false,
-      count: true,
-      max: false,
-      min: false,
-      std: false,
-      sum: true,
-      percentile: [0.90]});
-    return n;
-  }
-
-  function createNumericForUnifiedEventTime(name) {
-    const n = new tr.v.Histogram(name,
-        timeDurationInMs_smallerIsBetter, CUSTOM_BOUNDARIES);
-    n.customizeSummaryOptions({
-      avg: false,
-      count: true,
-      max: true,
-      min: false,
-      std: false,
       sum: true,
       percentile: [0.90]});
     return n;
@@ -248,18 +216,60 @@ tr.exportTo('tr.metrics.blink', function() {
    * - blink-gc-incremental-start
    */
   function addDurationOfTopEvents(histograms, model) {
+    const nameToNumeric = {};
+    const nameToEpochNumeric = {};
+    for (const name of blinkGarbageCollectionEventNames()) {
+      nameToNumeric[name] = createNumericForEventTime(name);
+      nameToEpochNumeric[name] = createNumericForEventTime(name + '_per-epoch');
+    }
     tr.metrics.v8.utils.groupAndProcessEvents(model,
         isNonForcedNonAggregatedBlinkGarbageCollectionEvent,
-        blinkGarbageCollectionEventName,
-        function(name, events) {
-          const cpuDuration = createNumericForTopEventTime(name);
+        event => event.args.epoch,
+        function(epoch, events) {
+          const namesToPerEpochDurations = {};
+          for (const event of events) {
+            const name = blinkGarbageCollectionEventName(event);
+            nameToNumeric[name].addSample(event.cpuDuration);
+            namesToPerEpochDurations[name] =
+                (namesToPerEpochDurations[name] || 0) + event.cpuDuration;
+          }
+          for (const name in namesToPerEpochDurations) {
+            nameToEpochNumeric[name].addSample(namesToPerEpochDurations[name]);
+          }
+        }
+    );
+    for (const name of blinkGarbageCollectionEventNames()) {
+      histograms.addHistogram(nameToNumeric[name]);
+      histograms.addHistogram(nameToEpochNumeric[name]);
+    }
+  }
+
+  function addIndividualDurationsOfEvents(histograms, model, name, filter) {
+    const cpuDuration = createNumericForEventTime(name);
+    tr.metrics.v8.utils.groupAndProcessEvents(model,
+        filter,
+        event => name,
+        function(group, events) {
           for (const event of events) {
             cpuDuration.addSample(event.cpuDuration);
           }
-          histograms.addHistogram(cpuDuration);
         },
-        blinkGarbageCollectionEventNames()
+        [name]
     );
+    histograms.addHistogram(cpuDuration);
+  }
+
+  function addPerEpochDurationsOfEvents(histograms, model, name, filter) {
+    const cpuDuration = createNumericForEventTime(name);
+    tr.metrics.v8.utils.groupAndProcessEvents(model,
+        filter,
+        event => event.args.epoch,
+        function(epoch, events) {
+          cpuDuration.addSample(
+              events.reduce((acc, current) => acc + current.cpuDuration, 0));
+        }
+    );
+    histograms.addHistogram(cpuDuration);
   }
 
   /**
@@ -267,17 +277,12 @@ tr.exportTo('tr.metrics.blink', function() {
    * - blink-gc-atomic-pause
    */
   function addDurationOfAtomicPause(histograms, model) {
-    tr.metrics.v8.utils.groupAndProcessEvents(model,
-        isNonForcedBlinkGarbageCollectionAtomicPauseEvent,
-        event => event.args.epoch,
-        function(group, events) {
-          const cpuDuration = createNumericForTopEventTime(
-              'blink-gc-atomic-pause');
-          cpuDuration.addSample(
-              events.reduce((acc, current) => acc + current.cpuDuration, 0));
-          histograms.addHistogram(cpuDuration);
-        }
-    );
+    addIndividualDurationsOfEvents(histograms, model,
+        'blink-gc-atomic-pause',
+        isNonForcedBlinkGarbageCollectionAtomicPauseEvent);
+    addPerEpochDurationsOfEvents(histograms, model,
+        'blink-gc-atomic-pause_per-epoch',
+        isNonForcedBlinkGarbageCollectionAtomicPauseEvent);
   }
 
   /**
@@ -285,17 +290,12 @@ tr.exportTo('tr.metrics.blink', function() {
    * - blink-gc-atomic-pause-mark-transitive-closure
    */
   function addDurationOfAtomicPauseTransitiveClosure(histograms, model) {
-    tr.metrics.v8.utils.groupAndProcessEvents(model,
-        isNonForcedBlinkGarbageCollectionAtomicPauseTransitiveColsureEvent,
-        event => event.args.epoch,
-        function(group, events) {
-          const cpuDuration = createNumericForTopEventTime(
-              'blink-gc-atomic-pause-mark-transitive-closure');
-          cpuDuration.addSample(
-              events.reduce((acc, current) => acc + current.cpuDuration, 0));
-          histograms.addHistogram(cpuDuration);
-        }
-    );
+    addIndividualDurationsOfEvents(histograms, model,
+        'blink-gc-atomic-pause-mark-transitive-closure',
+        isNonForcedBlinkGarbageCollectionAtomicPauseTransitiveColsureEvent);
+    addPerEpochDurationsOfEvents(histograms, model,
+        'blink-gc-atomic-pause-mark-transitive-closure_per-epoch',
+        isNonForcedBlinkGarbageCollectionAtomicPauseTransitiveColsureEvent);
   }
 
   /**
@@ -303,18 +303,10 @@ tr.exportTo('tr.metrics.blink', function() {
    * - blink-gc-total
    */
   function addTotalDurationOfTopEvents(histograms, model) {
-    tr.metrics.v8.utils.groupAndProcessEvents(model,
-        isNonForcedBlinkGarbageCollectionEvent,
-        event => 'blink-gc-total',
-        function(name, events) {
-          const cpuDuration = createNumericForTotalEventTime(name);
-          for (const event of events) {
-            cpuDuration.addSample(event.cpuDuration);
-          }
-          histograms.addHistogram(cpuDuration);
-        },
-        ['blink-gc-total']
-    );
+    addIndividualDurationsOfEvents(histograms, model,
+        'blink-gc-total', isNonForcedBlinkGarbageCollectionEvent);
+    addPerEpochDurationsOfEvents(histograms, model,
+        'blink-gc-total_per-epoch', isNonForcedBlinkGarbageCollectionEvent);
   }
 
   /**
@@ -322,18 +314,12 @@ tr.exportTo('tr.metrics.blink', function() {
    * - blink-gc-mark-roots
    */
   function addTotalDurationOfRootsMarking(histograms, model) {
-    tr.metrics.v8.utils.groupAndProcessEvents(model,
-        isNonForcedBlinkGarbageCollectionRootsMarkingEvent,
-        event => 'blink-gc-mark-roots',
-        function(name, events) {
-          const cpuDuration = createNumericForTotalEventTime(name);
-          for (const event of events) {
-            cpuDuration.addSample(event.cpuDuration);
-          }
-          histograms.addHistogram(cpuDuration);
-        },
-        ['blink-gc-mark-roots']
-    );
+    addIndividualDurationsOfEvents(histograms, model,
+        'blink-gc-mark-roots',
+        isNonForcedBlinkGarbageCollectionRootsMarkingEvent);
+    addPerEpochDurationsOfEvents(histograms, model,
+        'blink-gc-mark-roots_per-epoch',
+        isNonForcedBlinkGarbageCollectionRootsMarkingEvent);
   }
 
   /**
@@ -341,18 +327,12 @@ tr.exportTo('tr.metrics.blink', function() {
    * - blink-gc-mark-transitive-closure
    */
   function addTotalDurationOfMarkingTransitiveClosure(histograms, model) {
-    tr.metrics.v8.utils.groupAndProcessEvents(model,
-        isNonForcedBlinkGarbageCollectionMarkingTransitiveColsureEvent,
-        event => 'blink-gc-mark-transitive-closure',
-        function(name, events) {
-          const cpuDuration = createNumericForTotalEventTime(name);
-          for (const event of events) {
-            cpuDuration.addSample(event.cpuDuration);
-          }
-          histograms.addHistogram(cpuDuration);
-        },
-        ['blink-gc-mark-transitive-closure']
-    );
+    addIndividualDurationsOfEvents(histograms, model,
+        'blink-gc-mark-transitive-closure',
+        isNonForcedBlinkGarbageCollectionMarkingTransitiveColsureEvent);
+    addPerEpochDurationsOfEvents(histograms, model,
+        'blink-gc-mark-transitive-closure_per-epoch',
+        isNonForcedBlinkGarbageCollectionMarkingTransitiveColsureEvent);
   }
 
   /**
@@ -360,18 +340,12 @@ tr.exportTo('tr.metrics.blink', function() {
    * - blink-gc-mark-foreground
    */
   function addTotalDurationOfForegroundMarking(histograms, model) {
-    tr.metrics.v8.utils.groupAndProcessEvents(model,
-        isNonForcedBlinkGarbageCollectionForegroundMarkingEvent,
-        event => 'blink-gc-mark-foreground',
-        function(name, events) {
-          const cpuDuration = createNumericForTotalEventTime(name);
-          for (const event of events) {
-            cpuDuration.addSample(event.cpuDuration);
-          }
-          histograms.addHistogram(cpuDuration);
-        },
-        ['blink-gc-mark-foreground']
-    );
+    addIndividualDurationsOfEvents(histograms, model,
+        'blink-gc-mark-foreground',
+        isNonForcedBlinkGarbageCollectionForegroundMarkingEvent);
+    addPerEpochDurationsOfEvents(histograms, model,
+        'blink-gc-mark-foreground_per-epoch',
+        isNonForcedBlinkGarbageCollectionForegroundMarkingEvent);
   }
 
   /**
@@ -379,18 +353,12 @@ tr.exportTo('tr.metrics.blink', function() {
    * - blink-gc-mark-foreground-forced
    */
   function addTotalDurationOfForcedForegroundMarking(histograms, model) {
-    tr.metrics.v8.utils.groupAndProcessEvents(model,
-        isNonForcedBlinkGarbageCollectionForcedForegroundMarkEvent,
-        event => 'blink-gc-mark-foreground-forced',
-        function(name, events) {
-          const cpuDuration = createNumericForTotalEventTime(name);
-          for (const event of events) {
-            cpuDuration.addSample(event.cpuDuration);
-          }
-          histograms.addHistogram(cpuDuration);
-        },
-        ['blink-gc-mark-foreground-forced']
-    );
+    addIndividualDurationsOfEvents(histograms, model,
+        'blink-gc-mark-foreground-forced',
+        isNonForcedBlinkGarbageCollectionForcedForegroundMarkEvent);
+    addPerEpochDurationsOfEvents(histograms, model,
+        'blink-gc-mark-foreground-forced_per-epoch',
+        isNonForcedBlinkGarbageCollectionForcedForegroundMarkEvent);
   }
 
   /**
@@ -398,18 +366,12 @@ tr.exportTo('tr.metrics.blink', function() {
    * - blink-gc-mark-background
    */
   function addTotalDurationOfBackgroundMarking(histograms, model) {
-    tr.metrics.v8.utils.groupAndProcessEvents(model,
-        isNonForcedBlinkGarbageCollectionBackgroundMarkingEvent,
-        event => 'blink-gc-mark-background',
-        function(name, events) {
-          const cpuDuration = createNumericForTotalEventTime(name);
-          for (const event of events) {
-            cpuDuration.addSample(event.cpuDuration);
-          }
-          histograms.addHistogram(cpuDuration);
-        },
-        ['blink-gc-mark-background']
-    );
+    addIndividualDurationsOfEvents(histograms, model,
+        'blink-gc-mark-background',
+        isNonForcedBlinkGarbageCollectionBackgroundMarkingEvent);
+    addPerEpochDurationsOfEvents(histograms, model,
+        'blink-gc-mark-background_per-epoch',
+        isNonForcedBlinkGarbageCollectionBackgroundMarkingEvent);
   }
 
   /**
@@ -417,18 +379,12 @@ tr.exportTo('tr.metrics.blink', function() {
    * - blink-gc-sweep-foreground
    */
   function addTotalDurationOfForegroundSweeping(histograms, model) {
-    tr.metrics.v8.utils.groupAndProcessEvents(model,
-        isNonForcedBlinkGarbageCollectionForegroundSweepingEvent,
-        event => 'blink-gc-sweep-foreground',
-        function(name, events) {
-          const cpuDuration = createNumericForTotalEventTime(name);
-          for (const event of events) {
-            cpuDuration.addSample(event.cpuDuration);
-          }
-          histograms.addHistogram(cpuDuration);
-        },
-        ['blink-gc-sweep-foreground']
-    );
+    addIndividualDurationsOfEvents(histograms, model,
+        'blink-gc-sweep-foreground',
+        isNonForcedBlinkGarbageCollectionForegroundSweepingEvent);
+    addPerEpochDurationsOfEvents(histograms, model,
+        'blink-gc-sweep-foreground_per-epoch',
+        isNonForcedBlinkGarbageCollectionForegroundSweepingEvent);
   }
 
   /**
@@ -436,18 +392,12 @@ tr.exportTo('tr.metrics.blink', function() {
    * - blink-gc-sweep-background
    */
   function addTotalDurationOfBackgroundSweeping(histograms, model) {
-    tr.metrics.v8.utils.groupAndProcessEvents(model,
-        isNonForcedBlinkGarbageCollectionBackgroundSweepingEvent,
-        event => 'blink-gc-sweep-background',
-        function(name, events) {
-          const cpuDuration = createNumericForTotalEventTime(name);
-          for (const event of events) {
-            cpuDuration.addSample(event.cpuDuration);
-          }
-          histograms.addHistogram(cpuDuration);
-        },
-        ['blink-gc-sweep-background']
-    );
+    addIndividualDurationsOfEvents(histograms, model,
+        'blink-gc-sweep-background',
+        isNonForcedBlinkGarbageCollectionBackgroundSweepingEvent);
+    addPerEpochDurationsOfEvents(histograms, model,
+        'blink-gc-sweep-background_per-epoch',
+        isNonForcedBlinkGarbageCollectionBackgroundSweepingEvent);
   }
 
   function isV8OrBlinkTopLevelGarbageCollectionEvent(event) {
@@ -457,23 +407,13 @@ tr.exportTo('tr.metrics.blink', function() {
 
   /**
    * Example output:
-   * - unified-gc-total_sum
-   * - unified-gc-total_max
-   * - unified-gc-total_count
+   * - unified-gc-total
    */
   function addTotalDurationOfBlinkAndV8TopEvents(histograms, model) {
-    tr.metrics.v8.utils.groupAndProcessEvents(model,
-        isV8OrBlinkTopLevelGarbageCollectionEvent,
-        event => 'unified-gc-total',
-        function(name, events) {
-          const cpuDuration = createNumericForUnifiedEventTime(name);
-          for (const event of events) {
-            cpuDuration.addSample(event.cpuDuration);
-          }
-          histograms.addHistogram(cpuDuration);
-        },
-        ['unified-gc-total']
-    );
+    addIndividualDurationsOfEvents(histograms, model,
+        'unified-gc-total',
+        isV8OrBlinkTopLevelGarbageCollectionEvent);
+    // No epoch durations because v8 events don't provide an epoch id.
   }
 
   return {
