--- a/tracing/tracing/metrics/v8/utils.html
+++ b/tracing/tracing/metrics/v8/utils.html
@@ -238,6 +238,7 @@ tr.exportTo('tr.metrics.v8.utils', function() {
       if (rendererHelper.isChromeTracingUI) continue;
       threads.push(rendererHelper.mainThread);
       threads = threads.concat(rendererHelper.dedicatedWorkerThreads);
+      threads = threads.concat(rendererHelper.serviceWorkerThreads);
       threads = threads.concat(rendererHelper.foregroundWorkerThreads);
     }
     return threads;
