--- a/tracing/tracing/metrics/blink/gc_metric.html
+++ b/tracing/tracing/metrics/blink/gc_metric.html
@@ -31,6 +31,32 @@ tr.exportTo('tr.metrics.blink', function() {
         'blink-gc-atomic-pause-sweep-and-compact'
   };
 
+  // Maps non-aggregated Blink GC events in timeline to telemetry friendly
+  // names using the new naming scheme. This map contains events that occur
+  // only on the main thread.
+  const BLINK_NON_AGGREGATED_GC_EVENTS_NEW_NAMES_MAP = {
+    'BlinkGC.AtomicPauseMarkEpilogue':
+        'blink:gc:main_thread:cycle:full:atomic:mark:epilogue',
+    'BlinkGC.AtomicPauseMarkPrologue':
+        'blink:gc:main_thread:cycle:full:atomic:mark:prologue',
+    'BlinkGC.AtomicPauseMarkRoots':
+        'blink:gc:main_thread:cycle:full:atomic:mark:roots',
+    'BlinkGC.IncrementalMarkingStartMarking':
+        'blink:gc:main_thread:cycle:full:incremental:mark:start',
+    'BlinkGC.IncrementalMarkingStep':
+        'blink:gc:main_thread:cycle:full:incremental:mark:step',
+    'BlinkGC.UnifiedMarkingStep':
+        'unified:gc:main_thread:cycle:full:mark:step',
+    'BlinkGC.CompleteSweep':
+        'blink:gc:main_thread:cycle:full:sweep:complete',
+    'BlinkGC.LazySweepInIdle':
+        'blink:gc:main_thread:cycle:full:sweep:idle',
+    'BlinkGC.LazySweepOnAllocation':
+        'blink:gc:main_thread:cycle:full:sweep:on_allocation',
+    'BlinkGC.AtomicPauseSweepAndCompact':
+        'blink:gc:main_thread:cycle:full:atomic:sweep:compact'
+  };
+
   // All events that should be summed up to 'blink-gc-mark-roots'.
   const BLINK_TOP_GC_ROOTS_MARKING_EVENTS = [
     'BlinkGC.VisitRoots'
@@ -108,6 +134,14 @@ tr.exportTo('tr.metrics.blink', function() {
     return Object.values(BLINK_NON_AGGREGATED_GC_EVENTS_NAMES_MAP);
   }
 
+  function blinkGarbageCollectionEventNewName(event) {
+    return BLINK_NON_AGGREGATED_GC_EVENTS_NEW_NAMES_MAP[event.title];
+  }
+
+  function blinkGarbageCollectionEventNewNames() {
+    return Object.values(BLINK_NON_AGGREGATED_GC_EVENTS_NEW_NAMES_MAP);
+  }
+
   function isNonForcedEvent(event) {
     return (!event.args || !event.args.forced) &&
            !tr.metrics.v8.utils.isForcedGarbageCollectionEvent(event);
@@ -134,8 +168,7 @@ tr.exportTo('tr.metrics.blink', function() {
   function
   isNonForcedBlinkGarbageCollectionMarkingTransitiveColsureEvent(event) {
     return BLINK_GC_FOREGROUND_MARKING_TRANSITIVE_CLOSURE_EVENTS.includes(
-        event.title) &&
-           isNonForcedEvent(event);
+        event.title) && isNonForcedEvent(event);
   }
 
   function
@@ -191,53 +224,27 @@ tr.exportTo('tr.metrics.blink', function() {
     addTotalDurationOfBackgroundSweeping(histograms, model);
   }
 
-  tr.metrics.MetricRegistry.register(blinkGcMetric);
+  function getEventEpochUniqueId(event) {
+    // event.parentContainer.parent.stableId return the event's process id.
+    return event.parentContainer.parent.stableId + ':' + event.args.epoch;
+  }
 
-  const timeDurationInMs_smallerIsBetter =
-      tr.b.Unit.byName.timeDurationInMs_smallerIsBetter;
+  tr.metrics.MetricRegistry.register(blinkGcMetric);
 
   // 0.1 steps from 0 to 20 since it is the most common range.
   // Exponentially increasing steps from 20 to 200.
   const CUSTOM_BOUNDARIES = tr.v.HistogramBinBoundaries.createLinear(0, 20, 200)
       .addExponentialBins(200, 100);
 
-  function createNumericForTopEventTime(name) {
+  function createNumericForEventTime(name) {
     const n = new tr.v.Histogram(name,
-        timeDurationInMs_smallerIsBetter, CUSTOM_BOUNDARIES);
+        tr.b.Unit.byName.timeDurationInMs_smallerIsBetter, CUSTOM_BOUNDARIES);
     n.customizeSummaryOptions({
       avg: true,
       count: true,
       max: true,
-      min: false,
+      min: true,
       std: true,
-      sum: true,
-      percentile: [0.90]});
-    return n;
-  }
-
-  function createNumericForTotalEventTime(name) {
-    const n = new tr.v.Histogram(name,
-        timeDurationInMs_smallerIsBetter, CUSTOM_BOUNDARIES);
-    n.customizeSummaryOptions({
-      avg: false,
-      count: true,
-      max: false,
-      min: false,
-      std: false,
-      sum: true,
-      percentile: [0.90]});
-    return n;
-  }
-
-  function createNumericForUnifiedEventTime(name) {
-    const n = new tr.v.Histogram(name,
-        timeDurationInMs_smallerIsBetter, CUSTOM_BOUNDARIES);
-    n.customizeSummaryOptions({
-      avg: false,
-      count: true,
-      max: true,
-      min: false,
-      std: false,
       sum: true,
       percentile: [0.90]});
     return n;
@@ -248,18 +255,65 @@ tr.exportTo('tr.metrics.blink', function() {
    * - blink-gc-incremental-start
    */
   function addDurationOfTopEvents(histograms, model) {
+    const nameToNumeric = {};
+    const nameToEpochNumeric = {};
+    for (const name of blinkGarbageCollectionEventNames()) {
+      nameToNumeric[name] = createNumericForEventTime(name);
+    }
+    for (const name of blinkGarbageCollectionEventNewNames()) {
+      nameToEpochNumeric[name] = createNumericForEventTime(name);
+    }
     tr.metrics.v8.utils.groupAndProcessEvents(model,
         isNonForcedNonAggregatedBlinkGarbageCollectionEvent,
-        blinkGarbageCollectionEventName,
-        function(name, events) {
-          const cpuDuration = createNumericForTopEventTime(name);
+        getEventEpochUniqueId,
+        function(epoch, events) {
+          const namesToPerEpochDurations = {};
+          for (const event of events) {
+            nameToNumeric[blinkGarbageCollectionEventName(event)]
+                .addSample(event.cpuDuration);
+            const name = blinkGarbageCollectionEventNewName(event);
+            namesToPerEpochDurations[name] =
+                (namesToPerEpochDurations[name] || 0) + event.cpuDuration;
+          }
+          for (const name in namesToPerEpochDurations) {
+            nameToEpochNumeric[name].addSample(namesToPerEpochDurations[name]);
+          }
+        }
+    );
+    for (const name of blinkGarbageCollectionEventNames()) {
+      histograms.addHistogram(nameToNumeric[name]);
+    }
+    for (const name of blinkGarbageCollectionEventNewNames()) {
+      histograms.addHistogram(nameToEpochNumeric[name]);
+    }
+  }
+
+  function addIndividualDurationsOfEvents(histograms, model, name, filter) {
+    const cpuDuration = createNumericForEventTime(name);
+    tr.metrics.v8.utils.groupAndProcessEvents(model,
+        filter,
+        event => name,
+        function(group, events) {
           for (const event of events) {
             cpuDuration.addSample(event.cpuDuration);
           }
-          histograms.addHistogram(cpuDuration);
         },
-        blinkGarbageCollectionEventNames()
+        [name]
     );
+    histograms.addHistogram(cpuDuration);
+  }
+
+  function addPerEpochDurationsOfEvents(histograms, model, name, filter) {
+    const cpuDuration = createNumericForEventTime(name);
+    tr.metrics.v8.utils.groupAndProcessEvents(model,
+        filter,
+        getEventEpochUniqueId,
+        function(epoch, events) {
+          cpuDuration.addSample(
+              events.reduce((acc, current) => acc + current.cpuDuration, 0));
+        }
+    );
+    histograms.addHistogram(cpuDuration);
   }
 
   /**
@@ -267,17 +321,12 @@ tr.exportTo('tr.metrics.blink', function() {
    * - blink-gc-atomic-pause
    */
   function addDurationOfAtomicPause(histograms, model) {
-    tr.metrics.v8.utils.groupAndProcessEvents(model,
-        isNonForcedBlinkGarbageCollectionAtomicPauseEvent,
-        event => event.args.epoch,
-        function(group, events) {
-          const cpuDuration = createNumericForTopEventTime(
-              'blink-gc-atomic-pause');
-          cpuDuration.addSample(
-              events.reduce((acc, current) => acc + current.cpuDuration, 0));
-          histograms.addHistogram(cpuDuration);
-        }
-    );
+    addIndividualDurationsOfEvents(histograms, model,
+        'blink-gc-atomic-pause',
+        isNonForcedBlinkGarbageCollectionAtomicPauseEvent);
+    addPerEpochDurationsOfEvents(histograms, model,
+        'blink:gc:main_thread:cycle:full:atomic',
+        isNonForcedBlinkGarbageCollectionAtomicPauseEvent);
   }
 
   /**
@@ -285,17 +334,12 @@ tr.exportTo('tr.metrics.blink', function() {
    * - blink-gc-atomic-pause-mark-transitive-closure
    */
   function addDurationOfAtomicPauseTransitiveClosure(histograms, model) {
-    tr.metrics.v8.utils.groupAndProcessEvents(model,
-        isNonForcedBlinkGarbageCollectionAtomicPauseTransitiveColsureEvent,
-        event => event.args.epoch,
-        function(group, events) {
-          const cpuDuration = createNumericForTopEventTime(
-              'blink-gc-atomic-pause-mark-transitive-closure');
-          cpuDuration.addSample(
-              events.reduce((acc, current) => acc + current.cpuDuration, 0));
-          histograms.addHistogram(cpuDuration);
-        }
-    );
+    addIndividualDurationsOfEvents(histograms, model,
+        'blink-gc-atomic-pause-mark-transitive-closure',
+        isNonForcedBlinkGarbageCollectionAtomicPauseTransitiveColsureEvent);
+    addPerEpochDurationsOfEvents(histograms, model,
+        'blink:gc:main_thread:cycle:full:atomic:mark:transitive_closure',
+        isNonForcedBlinkGarbageCollectionAtomicPauseTransitiveColsureEvent);
   }
 
   /**
@@ -303,18 +347,12 @@ tr.exportTo('tr.metrics.blink', function() {
    * - blink-gc-total
    */
   function addTotalDurationOfTopEvents(histograms, model) {
-    tr.metrics.v8.utils.groupAndProcessEvents(model,
-        isNonForcedBlinkGarbageCollectionEvent,
-        event => 'blink-gc-total',
-        function(name, events) {
-          const cpuDuration = createNumericForTotalEventTime(name);
-          for (const event of events) {
-            cpuDuration.addSample(event.cpuDuration);
-          }
-          histograms.addHistogram(cpuDuration);
-        },
-        ['blink-gc-total']
-    );
+    addIndividualDurationsOfEvents(histograms, model,
+        'blink-gc-total',
+        isNonForcedBlinkGarbageCollectionEvent);
+    addPerEpochDurationsOfEvents(histograms, model,
+        'blink:gc:main_thread:cycle:full',
+        isNonForcedBlinkGarbageCollectionEvent);
   }
 
   /**
@@ -322,18 +360,12 @@ tr.exportTo('tr.metrics.blink', function() {
    * - blink-gc-mark-roots
    */
   function addTotalDurationOfRootsMarking(histograms, model) {
-    tr.metrics.v8.utils.groupAndProcessEvents(model,
-        isNonForcedBlinkGarbageCollectionRootsMarkingEvent,
-        event => 'blink-gc-mark-roots',
-        function(name, events) {
-          const cpuDuration = createNumericForTotalEventTime(name);
-          for (const event of events) {
-            cpuDuration.addSample(event.cpuDuration);
-          }
-          histograms.addHistogram(cpuDuration);
-        },
-        ['blink-gc-mark-roots']
-    );
+    addIndividualDurationsOfEvents(histograms, model,
+        'blink-gc-mark-roots',
+        isNonForcedBlinkGarbageCollectionRootsMarkingEvent);
+    addPerEpochDurationsOfEvents(histograms, model,
+        'blink:gc:main_thread:cycle:full:mark:roots',
+        isNonForcedBlinkGarbageCollectionRootsMarkingEvent);
   }
 
   /**
@@ -341,18 +373,12 @@ tr.exportTo('tr.metrics.blink', function() {
    * - blink-gc-mark-transitive-closure
    */
   function addTotalDurationOfMarkingTransitiveClosure(histograms, model) {
-    tr.metrics.v8.utils.groupAndProcessEvents(model,
-        isNonForcedBlinkGarbageCollectionMarkingTransitiveColsureEvent,
-        event => 'blink-gc-mark-transitive-closure',
-        function(name, events) {
-          const cpuDuration = createNumericForTotalEventTime(name);
-          for (const event of events) {
-            cpuDuration.addSample(event.cpuDuration);
-          }
-          histograms.addHistogram(cpuDuration);
-        },
-        ['blink-gc-mark-transitive-closure']
-    );
+    addIndividualDurationsOfEvents(histograms, model,
+        'blink-gc-mark-transitive-closure',
+        isNonForcedBlinkGarbageCollectionMarkingTransitiveColsureEvent);
+    addPerEpochDurationsOfEvents(histograms, model,
+        'blink:gc:main_thread:cycle:full:mark:transitive_closure',
+        isNonForcedBlinkGarbageCollectionMarkingTransitiveColsureEvent);
   }
 
   /**
@@ -360,18 +386,12 @@ tr.exportTo('tr.metrics.blink', function() {
    * - blink-gc-mark-foreground
    */
   function addTotalDurationOfForegroundMarking(histograms, model) {
-    tr.metrics.v8.utils.groupAndProcessEvents(model,
-        isNonForcedBlinkGarbageCollectionForegroundMarkingEvent,
-        event => 'blink-gc-mark-foreground',
-        function(name, events) {
-          const cpuDuration = createNumericForTotalEventTime(name);
-          for (const event of events) {
-            cpuDuration.addSample(event.cpuDuration);
-          }
-          histograms.addHistogram(cpuDuration);
-        },
-        ['blink-gc-mark-foreground']
-    );
+    addIndividualDurationsOfEvents(histograms, model,
+        'blink-gc-mark-foreground',
+        isNonForcedBlinkGarbageCollectionForegroundMarkingEvent);
+    addPerEpochDurationsOfEvents(histograms, model,
+        'blink:gc:main_thread:cycle:full:mark',
+        isNonForcedBlinkGarbageCollectionForegroundMarkingEvent);
   }
 
   /**
@@ -379,18 +399,12 @@ tr.exportTo('tr.metrics.blink', function() {
    * - blink-gc-mark-foreground-forced
    */
   function addTotalDurationOfForcedForegroundMarking(histograms, model) {
-    tr.metrics.v8.utils.groupAndProcessEvents(model,
-        isNonForcedBlinkGarbageCollectionForcedForegroundMarkEvent,
-        event => 'blink-gc-mark-foreground-forced',
-        function(name, events) {
-          const cpuDuration = createNumericForTotalEventTime(name);
-          for (const event of events) {
-            cpuDuration.addSample(event.cpuDuration);
-          }
-          histograms.addHistogram(cpuDuration);
-        },
-        ['blink-gc-mark-foreground-forced']
-    );
+    addIndividualDurationsOfEvents(histograms, model,
+        'blink-gc-mark-foreground-forced',
+        isNonForcedBlinkGarbageCollectionForcedForegroundMarkEvent);
+    addPerEpochDurationsOfEvents(histograms, model,
+        'blink:gc:main_thread:cycle:full:mark:forced',
+        isNonForcedBlinkGarbageCollectionForcedForegroundMarkEvent);
   }
 
   /**
@@ -398,18 +412,12 @@ tr.exportTo('tr.metrics.blink', function() {
    * - blink-gc-mark-background
    */
   function addTotalDurationOfBackgroundMarking(histograms, model) {
-    tr.metrics.v8.utils.groupAndProcessEvents(model,
-        isNonForcedBlinkGarbageCollectionBackgroundMarkingEvent,
-        event => 'blink-gc-mark-background',
-        function(name, events) {
-          const cpuDuration = createNumericForTotalEventTime(name);
-          for (const event of events) {
-            cpuDuration.addSample(event.cpuDuration);
-          }
-          histograms.addHistogram(cpuDuration);
-        },
-        ['blink-gc-mark-background']
-    );
+    addIndividualDurationsOfEvents(histograms, model,
+        'blink-gc-mark-background',
+        isNonForcedBlinkGarbageCollectionBackgroundMarkingEvent);
+    addPerEpochDurationsOfEvents(histograms, model,
+        'blink:gc:concurrent_thread:cycle:full:mark',
+        isNonForcedBlinkGarbageCollectionBackgroundMarkingEvent);
   }
 
   /**
@@ -417,18 +425,12 @@ tr.exportTo('tr.metrics.blink', function() {
    * - blink-gc-sweep-foreground
    */
   function addTotalDurationOfForegroundSweeping(histograms, model) {
-    tr.metrics.v8.utils.groupAndProcessEvents(model,
-        isNonForcedBlinkGarbageCollectionForegroundSweepingEvent,
-        event => 'blink-gc-sweep-foreground',
-        function(name, events) {
-          const cpuDuration = createNumericForTotalEventTime(name);
-          for (const event of events) {
-            cpuDuration.addSample(event.cpuDuration);
-          }
-          histograms.addHistogram(cpuDuration);
-        },
-        ['blink-gc-sweep-foreground']
-    );
+    addIndividualDurationsOfEvents(histograms, model,
+        'blink-gc-sweep-foreground',
+        isNonForcedBlinkGarbageCollectionForegroundSweepingEvent);
+    addPerEpochDurationsOfEvents(histograms, model,
+        'blink:gc:main_thread:cycle:full:sweep',
+        isNonForcedBlinkGarbageCollectionForegroundSweepingEvent);
   }
 
   /**
@@ -436,18 +438,12 @@ tr.exportTo('tr.metrics.blink', function() {
    * - blink-gc-sweep-background
    */
   function addTotalDurationOfBackgroundSweeping(histograms, model) {
-    tr.metrics.v8.utils.groupAndProcessEvents(model,
-        isNonForcedBlinkGarbageCollectionBackgroundSweepingEvent,
-        event => 'blink-gc-sweep-background',
-        function(name, events) {
-          const cpuDuration = createNumericForTotalEventTime(name);
-          for (const event of events) {
-            cpuDuration.addSample(event.cpuDuration);
-          }
-          histograms.addHistogram(cpuDuration);
-        },
-        ['blink-gc-sweep-background']
-    );
+    addIndividualDurationsOfEvents(histograms, model,
+        'blink-gc-sweep-background',
+        isNonForcedBlinkGarbageCollectionBackgroundSweepingEvent);
+    addPerEpochDurationsOfEvents(histograms, model,
+        'blink:gc:concurrent_thread:cycle:full:sweep',
+        isNonForcedBlinkGarbageCollectionBackgroundSweepingEvent);
   }
 
   function isV8OrBlinkTopLevelGarbageCollectionEvent(event) {
@@ -457,23 +453,13 @@ tr.exportTo('tr.metrics.blink', function() {
 
   /**
    * Example output:
-   * - unified-gc-total_sum
-   * - unified-gc-total_max
-   * - unified-gc-total_count
+   * - unified-gc-total
    */
   function addTotalDurationOfBlinkAndV8TopEvents(histograms, model) {
-    tr.metrics.v8.utils.groupAndProcessEvents(model,
-        isV8OrBlinkTopLevelGarbageCollectionEvent,
-        event => 'unified-gc-total',
-        function(name, events) {
-          const cpuDuration = createNumericForUnifiedEventTime(name);
-          for (const event of events) {
-            cpuDuration.addSample(event.cpuDuration);
-          }
-          histograms.addHistogram(cpuDuration);
-        },
-        ['unified-gc-total']
-    );
+    addIndividualDurationsOfEvents(histograms, model,
+        'unified-gc-total',
+        isV8OrBlinkTopLevelGarbageCollectionEvent);
+    // No epoch durations because v8 events don't provide an epoch id.
   }
 
   return {
