Chrome Perf Dashboard UI links to Monorail bugs are missing project id.
Add a Monorail project id box in the form to create a new bug.
Also some links to bugs are missing a project id.
When the project id is missing the links are redirecting to chromium bugs.

Bug: chromium:1101773
Change-Id: I851296df105a3ead7a9edddff507839030b6914a

--- a/dashboard/dashboard/pinpoint/elements/job-page/job-details.html
+++ b/dashboard/dashboard/pinpoint/elements/job-page/job-details.html
@@ -35,8 +35,8 @@ found in the LICENSE file.
     <ul>
       <template is="dom-if" if="[[job.bug_id]]">
         <li>
-          <a href="https://crbug.com/[[job.project]]/[[job.bug_id]]" target="_blank">
-            Issue [[job.project]]:[[job.bug_id]]
+          <a href="https://crbug.com/[[job.bug_id]]" target="_blank">
+            Issue [[job.bug_id]]
           </a>
       </template>
       <li>
