--- a/dashboard/dashboard/pinpoint/elements/jobs-page/jobs-table.html
+++ b/dashboard/dashboard/pinpoint/elements/jobs-page/jobs-table.html
@@ -68,7 +68,7 @@ found in the LICENSE file.
             <td><a href='/job/[[item.job_id]]'>[[item.name]]</a></td>
             <td><a href='[[configurationLink(item.configuration)]]'>[[formatConfiguration(item.configuration)]]</a></td>
             <td>[[item.user]]</td>
-            <td><a href="https://crbug.com/[[item.project]]/[[item.bug_id]]">[[item.project]]:[[item.bug_id]]</a></td>
+            <td><a href="https://crbug.com/[[item.bug_id]]">[[item.bug_id]]</a></td>
             <td>[[formatDate(item.created)]]</td>
             <td>[[formatComparisonMode(item.comparison_mode)]]</td>
             <td>
