Chrome Perf Dashboard UI links to Monorail bugs are missing project id.
Add a Monorail project id box in the form to create a new bug.
Also some links to bugs are missing a project id.
When the project id is missing the links are redirecting to chromium bugs.

Bug: chromium:1101773
Change-Id: I851296df105a3ead7a9edddff507839030b6914a

--- a/dashboard/dashboard/elements/bug-details.html
+++ b/dashboard/dashboard/elements/bug-details.html
@@ -139,7 +139,8 @@ Polymer({
     },
     projectId: {
       notify: true,
-      type: String
+      type: String,
+      value: 'chromium'
     },
     comments: {
       notify: true,
