--- a/dashboard/dashboard/elements/chart-tooltip.html
+++ b/dashboard/dashboard/elements/chart-tooltip.html
@@ -154,7 +154,7 @@ Polymer({
     },
     projectId: {
       type: String,
-      value: 'chromium'
+      value: ''
     },
     hideStddev: {
       type: Boolean,
