--- a/dashboard/dashboard/elements/bug-info-span.html
+++ b/dashboard/dashboard/elements/bug-info-span.html
@@ -12,8 +12,8 @@ The bug-info-span is a in-line element showing a bug ID with link, etc.
 
 <dom-module id="bug-info-span">
   <template>
-    <a href="/group_report?bug_id={{bugId}}&project_id={{projectId}}"
-       hidden$="{{!computeIsPositive(bugId)}}">{{project_id}}:{{bugId}}</a>
+    <a href="/group_report?bug_id={{bugId}}"
+       hidden$="{{!computeIsPositive(bugId)}}">{{bugId}}</a>
      <span hidden$="{{computeIsPositive(bugId)}}">{{statusString()}}</span>
     <alert-remove-box hidden$="{{!bugId}}"
                       key="{{key}}"
@@ -29,10 +29,6 @@ Polymer({
     bugId: {
       type: Number,
       value: 0
-    },
-    projectId: {
-      type: String,
-      value: 'chromium'
     },
     xsrfToken: {
       value: null,
