Revert "Chrome Perf Dashboard UI links to Monorail bugs are missing project id."
This reverts commit af63c44964adbcb5c46c65bf7272addd06e8478e.

Reason for revert: some project ids are still missing.

Original change's description:
> Chrome Perf Dashboard UI links to Monorail bugs are missing project id.
> 
> Some links to bugs are missing a project id.
> When the project id is missing the links are redirecting to chromium bugs.
> 
> Bug: chromium:1101773
> Change-Id: I96f11a20602362dd8043a06d37ef52a4386715ae
> Reviewed-on: https://chromium-review.googlesource.com/c/catapult/+/2329572
> Reviewed-by: Dean Berris <dberris@chromium.org>
> Reviewed-by: Chenlin Fan <fancl@chromium.org>
> Commit-Queue: Jeremy Leconte <jleconte@google.com>

TBR=dberris@chromium.org,fancl@chromium.org,jleconte@google.com

# Not skipping CQ checks because original CL landed > 1 day ago.

Bug: chromium:1101773
Change-Id: Ifb750ad4d78dc04a0eeef34ace76db0026f810a3

--- a/dashboard/dashboard/elements/bug-details-test.html
+++ b/dashboard/dashboard/elements/bug-details-test.html
@@ -115,13 +115,11 @@ const testOptionsForError = {
 
 tr.b.unittest.testSuite(function() {
   test('benchmarkSuccess', function() {
-    d.BUG_DETAILS.populateForTest(new Map([
-      [12345, new Map([['test_project', Promise.resolve(mockResponse)]])]
-    ]));
+    d.BUG_DETAILS.populateForTest(new Map(
+        [[12345, Promise.resolve(mockResponse)]]));
 
     const e = document.createElement('bug-details');
     e.bugId = 12345;
-    e.projectId = 'test_project';
     this.addHTMLOutput(e);
 
     assert.strictEqual(xhrCalls, 0);
@@ -130,23 +128,20 @@ tr.b.unittest.testSuite(function() {
 
   test('benchmarkErrorAndSuccess', function() {
     d.BUG_DETAILS.populateForTest(new Map([
-      [12345, new Map([['test_project', Promise.resolve(mockResponse)]])],
-      [54321, new Map([['test_project', Promise.reject(errorResponse)]])],
+      [12345, Promise.resolve(mockResponse)],
+      [54321, Promise.reject(errorResponse)],
     ]));
 
     let e = document.createElement('bug-details');
     e.bugId = 12345;
-    e.projectId = 'test_project';
     this.addHTMLOutput(e);
 
     e = document.createElement('bug-details');
     e.bugId = 54321;
-    e.projectId = 'test_project';
     this.addHTMLOutput(e);
 
     e = document.createElement('bug-details');
     e.bugId = -2;
-    e.projectId = 'test_project';
     this.addHTMLOutput(e);  // This should show an error.
 
     assert.strictEqual(xhrCalls, 0);
@@ -155,33 +150,29 @@ tr.b.unittest.testSuite(function() {
 
   test('compactAllInTableErrorAndSuccess', function() {
     d.BUG_DETAILS.populateForTest(new Map([
-      [1, new Map([['test_project', Promise.resolve(mockResponse)]])],
-      [2, new Map([['test_project', Promise.resolve(mockResponseVariation)]])],
-      [3, new Map([['test_project', Promise.reject(errorResponse)]])],
+      [1, Promise.resolve(mockResponse)],
+      [2, Promise.resolve(mockResponseVariation)],
+      [3, Promise.reject(errorResponse)],
     ]));
 
     let e = document.createElement('bug-details');
     e.bugId = 1;
-    e.projectId = 'test_project';
     e.compactView = true;
     this.addHTMLOutput(e);
 
     e = document.createElement('bug-details');
     e.bugId = 2;
-    e.projectId = 'test_project';
     e.compactView = true;
     this.addHTMLOutput(e);
 
     e = document.createElement('bug-details');
     e.bugId = 3;
-    e.projectId = 'test_project';
     e.compactView = true;
     this.addHTMLOutput(e);  // This should show an error.
 
     // This one shouldn't add anything to the Map.
     e = document.createElement('bug-details');
     e.bugId = -2;
-    e.projectId = 'test_project';
     e.compactView = true;
     this.addHTMLOutput(e);  // This won't appear (because it's compact view).
 
@@ -192,13 +183,11 @@ tr.b.unittest.testSuite(function() {
   test('compactNoneInTableSuccess', function() {
     let e = document.createElement('bug-details');
     e.bugId = 1;
-    e.projectId = 'test_project';
     e.compactView = true;
     this.addHTMLOutput(e);
 
     e = document.createElement('bug-details');
     e.bugId = 2;
-    e.projectId = 'test_project';
     e.compactView = true;
     this.addHTMLOutput(e);
 
@@ -209,20 +198,17 @@ tr.b.unittest.testSuite(function() {
   test('compactNoneInTableError', function() {
     let e = document.createElement('bug-details');
     e.bugId = 1;
-    e.projectId = 'test_project';
     e.compactView = true;
     this.addHTMLOutput(e);
 
     e = document.createElement('bug-details');
     e.bugId = 2;
-    e.projectId = 'test_project';
     e.compactView = true;
     this.addHTMLOutput(e);
 
     // This one shouldn't add anything to the Map.
     e = document.createElement('bug-details');
     e.bugId = -2;
-    e.projectId = 'test_project';
     e.compactView = true;
     this.addHTMLOutput(e);  // This won't appear.
 
