Monorail links in group_report by group_id page are missing project ids.
https://chromeperf.appspot.com/group_report?group_id=9229219c-7373-4cde-a582-63fbdf004a21
The "Bug ID" link points to a chromium bug but it should point to a WebRTC bug.

Bug: chromium:1101773
Change-Id: I99f31f7ed8b9af09f86901842702fbfa4aa27135

--- a/dashboard/dashboard/elements/alerts-table.html
+++ b/dashboard/dashboard/elements/alerts-table.html
@@ -372,6 +372,7 @@ found in the LICENSE file.
 
           <td>
             <bug-info-span bug-id="{{item.bug_id}}"
+                           project-id="{{item.project_id}}"
                            key="{{item.key}}"
                            recovered$="{{item.recovered}}"
                            xsrf-token="{{xsrfToken}}"
