[exp] Extract cwv metric from traces.
Bug: chromium:1115376
Change-Id: I4b063fad84068b1c00ac612c783a94132138da66

--- a/tracing/tracing/metrics/rendering/rendering_metric.html
+++ b/tracing/tracing/metrics/rendering/rendering_metric.html
@@ -10,6 +10,7 @@ found in the LICENSE file.
 <link rel="import" href="/tracing/metrics/rendering/image_decode_time.html">
 <link rel="import" href="/tracing/metrics/rendering/pixels.html">
 <link rel="import" href="/tracing/metrics/rendering/queueing_duration.html">
+<link rel="import" href="/tracing/metrics/rendering/smoothness.html">
 
 <script>
 'use strict';
@@ -34,6 +35,7 @@ tr.exportTo('tr.metrics.rendering', function() {
       tr.metrics.rendering.addPixelsHistograms(histograms, model, segments);
       tr.metrics.rendering.addQueueingDurationHistograms(
           histograms, model, segments);
+      tr.metrics.rendering.addSmoothness(histograms, model, segments);
     }
 
     const uiSegments = chromeHelper.telemetryHelper.uiSegments;
