Fix crbug.com link and layout on group report page.
https://chromeperf.appspot.com/group_report?bug_id=11715&project_id=webrtc
The link on top of this page is missing the Monorail project webrtc.
Also the red cross on the Bug ID column get's out of place when the browser page is too small.

Bug: chromium:1101773
Change-Id: I12bcce2b07fe2c040839b47bf147be9461840ef0

--- a/dashboard/dashboard/elements/alerts-table.html
+++ b/dashboard/dashboard/elements/alerts-table.html
@@ -371,16 +371,18 @@ found in the LICENSE file.
           </td>
 
           <td>
-            <bug-info-span bug-id="{{item.bug_id}}"
-                           project-id="{{item.project_id}}"
-                           key="{{item.key}}"
-                           recovered$="{{item.recovered}}"
-                           xsrf-token="{{xsrfToken}}"
-                           on-untriaged="onUntriaged">
-            </bug-info-span>
-            <bisect-status hidden$="{{!item.bug_id}}"
-                           status="{{item.bisect_status}}">
-            </bisect-status>
+            <div>
+              <bug-info-span bug-id="{{item.bug_id}}"
+                            project-id="{{item.project_id}}"
+                            key="{{item.key}}"
+                            recovered$="{{item.recovered}}"
+                            xsrf-token="{{xsrfToken}}"
+                            on-untriaged="onUntriaged">
+              </bug-info-span>
+              <bisect-status hidden$="{{!item.bug_id}}"
+                            status="{{item.bisect_status}}">
+              </bisect-status>
+            </div>
           </td>
           <td class="revision_range">
             <revision-range start="{{getDisplayStartRev(item)}}" 
