--- a/dashboard/dashboard/elements/bug-info-span.html
+++ b/dashboard/dashboard/elements/bug-info-span.html
@@ -32,7 +32,7 @@ Polymer({
     },
     projectId: {
       type: String,
-      value: 'chromium'
+      value: ''
     },
     xsrfToken: {
       value: null,
