Fix Bug ID layout on group report page.
https://chromeperf.appspot.com/group_report?bug_id=11715&project_id=webrtc
Red cross on the Bug ID column get's out of place when the browser page is too small.

Bug: chromium:1101773
Change-Id: I33dc787342fc86a4843cd0b38269e4f63a7a2155

--- a/dashboard/dashboard/elements/alerts-table.html
+++ b/dashboard/dashboard/elements/alerts-table.html
@@ -301,6 +301,10 @@ found in the LICENSE file.
         z-index: var(--layer-dialogs);
       }
 
+      .bug_info_span {
+        white-space: nowrap;
+      }
+
       .error {
         color: #dd4b39;
         font-weight: bold;
@@ -370,19 +374,17 @@ found in the LICENSE file.
             </a>
           </td>
 
-          <td>
-            <div>
-              <bug-info-span bug-id="{{item.bug_id}}"
-                            project-id="{{item.project_id}}"
-                            key="{{item.key}}"
-                            recovered$="{{item.recovered}}"
-                            xsrf-token="{{xsrfToken}}"
-                            on-untriaged="onUntriaged">
-              </bug-info-span>
-              <bisect-status hidden$="{{!item.bug_id}}"
-                            status="{{item.bisect_status}}">
-              </bisect-status>
-            </div>
+          <td class="bug_info_span">
+            <bug-info-span bug-id="{{item.bug_id}}"
+                          project-id="{{item.project_id}}"
+                          key="{{item.key}}"
+                          recovered$="{{item.recovered}}"
+                          xsrf-token="{{xsrfToken}}"
+                          on-untriaged="onUntriaged">
+            </bug-info-span>
+            <bisect-status hidden$="{{!item.bug_id}}"
+                          status="{{item.bisect_status}}">
+            </bisect-status>
           </td>
           <td class="revision_range">
             <revision-range start="{{getDisplayStartRev(item)}}" 
