Revert "Fix Bug ID layout on group report page."
This reverts commit 77fb6d1812df4cff2b7c6f9916e091644bbd4fed.

Reason for revert: |Bug ID| column oversteps the |Revisions| column.

Original change's description:
> Fix Bug ID layout on group report page.
> 
> https://chromeperf.appspot.com/group_report?bug_id=11715&project_id=webrtc
> Red cross on the Bug ID column get's out of place when the browser page is too small.
> 
> Bug: chromium:1101773
> Change-Id: I33dc787342fc86a4843cd0b38269e4f63a7a2155
> Reviewed-on: https://chromium-review.googlesource.com/c/catapult/+/2380651
> Reviewed-by: Dean Berris <dberris@chromium.org>
> Reviewed-by: Mirko Bonadei <mbonadei@chromium.org>
> Commit-Queue: Jeremy Leconte <jleconte@google.com>

TBR=mbonadei@chromium.org,dberris@chromium.org,jleconte@google.com

# Not skipping CQ checks because original CL landed > 1 day ago.

Bug: chromium:1101773
Change-Id: Iafbd8e10444845dfb495f85a485936aaa6773698

--- a/dashboard/dashboard/elements/alerts-table.html
+++ b/dashboard/dashboard/elements/alerts-table.html
@@ -301,10 +301,6 @@ found in the LICENSE file.
         z-index: var(--layer-dialogs);
       }
 
-      .bug_info_span {
-        white-space: nowrap;
-      }
-
       .error {
         color: #dd4b39;
         font-weight: bold;
@@ -374,17 +370,19 @@ found in the LICENSE file.
             </a>
           </td>
 
-          <td class="bug_info_span">
-            <bug-info-span bug-id="{{item.bug_id}}"
-                          project-id="{{item.project_id}}"
-                          key="{{item.key}}"
-                          recovered$="{{item.recovered}}"
-                          xsrf-token="{{xsrfToken}}"
-                          on-untriaged="onUntriaged">
-            </bug-info-span>
-            <bisect-status hidden$="{{!item.bug_id}}"
-                          status="{{item.bisect_status}}">
-            </bisect-status>
+          <td>
+            <div>
+              <bug-info-span bug-id="{{item.bug_id}}"
+                            project-id="{{item.project_id}}"
+                            key="{{item.key}}"
+                            recovered$="{{item.recovered}}"
+                            xsrf-token="{{xsrfToken}}"
+                            on-untriaged="onUntriaged">
+              </bug-info-span>
+              <bisect-status hidden$="{{!item.bug_id}}"
+                            status="{{item.bisect_status}}">
+              </bisect-status>
+            </div>
           </td>
           <td class="revision_range">
             <revision-range start="{{getDisplayStartRev(item)}}" 
