Add Monorail project when triaging an alert with an existing bug.
When selecting an alert and clicking on 'TRIAGE'-> 'EXISTING BUG', only bugs in chromium can be selected.
This change adds the Monorail project to the bug displayed.
It also takes the selected project into account when clicking on 'Submit'.

Bug: chromium:1101773
Change-Id: Ia15124b22b2aaeec78698d06f05b3db61aa1f8e3

--- a/dashboard/dashboard/elements/chart-container.html
+++ b/dashboard/dashboard/elements/chart-container.html
@@ -2136,11 +2136,14 @@ triaging functionality in the chart.
       const jsonSeriesIndex = event.detail.alerts[0].seriesIndex;
       const dataIndex = event.detail.alerts[0].dataIndex;
       const bugId = event.detail.bugid;
+      const projectId = event.detail.projectid;
 
       // Update the bug id locally.
       const annotation = this.json.annotations[jsonSeriesIndex][dataIndex];
       annotation.g_anomaly.bug_id = bugId;
+      annotation.g_anomaly.project_id = projectId;
       this.$.tooltip.bugId = bugId;
+      this.$.tooltip.projectId = projectId;
       if (!bugId) {
         this.$.tooltip.alerts = this.$.tooltip.triagedAlerts;
         this.$.tooltip.triagedAlerts = null;
