--- a/dashboard/dashboard/elements/chart-tooltip.html
+++ b/dashboard/dashboard/elements/chart-tooltip.html
@@ -252,7 +252,8 @@ Polymer({
   onUntriaged(event, detail) {
     this.fire('triaged', {
       'alerts': this.triagedAlerts,
-      'bugid': null
+      'bugid': null,
+      'projectid': null
     });
   },
 
