Pass Monorail project to bisection.
Currently bisection can update only chromium Monorail bugs.
This change should fix this for autobisection as well as manual bisection.

Bug: chromium:1123318
Change-Id: I1659bfe1a149e121da2e09d8e61051ef493174f8

--- a/dashboard/dashboard/elements/bisect-button.html
+++ b/dashboard/dashboard/elements/bisect-button.html
@@ -66,6 +66,7 @@ found in the LICENSE file.
         notify: true
       },
       bugId: { notify: true },
+      projectId: { notify: true },
       xsrfToken: { notify: true }
     },
 
@@ -100,6 +101,7 @@ found in the LICENSE file.
       this.$.pinpoint.start_commit = this.bisectInfo.goodRev;
       this.$.pinpoint.end_commit = this.bisectInfo.badRev;
       this.$.pinpoint.bug_id = this.bugId;
+      this.$.pinpoint.project_id = this.projectId;
       this.$.pinpoint.show();
     }
   });
