--- a/dashboard/dashboard/elements/chart-tooltip.html
+++ b/dashboard/dashboard/elements/chart-tooltip.html
@@ -131,6 +131,7 @@ was just clicked.
         <div class="card-actions">
           <bisect-button dialog-confirm xsrf-token="{{xsrfToken}}"
                          bug-id="{{bugId}}"
+                         project-id="{{projectId}}"
                          bisect-info="{{bisectInfo}}"
                          alerts="[[alerts]]"></bisect-button>
           <trace-button dialog-confirm xsrf-token="{{xsrfToken}}"
