Reland "Fix pop up statement when triaging with an existing bug."
This is a reland of f46aaac5f21a690f1568dc9cf973da1e2968ef6e
Since {{!!lastSubmittedTryJobId}} returns true but the displayed string is empty.
Proposed solution is to test lastSubmittedTryJobId.toString().

Original change's description:
> Fix pop up statement when triaging with an existing bug.
>
> When triaging with an existing bug, a pop up states that a bisection is launched when it isn't.
> This is a bit confusing.
> After this fix, the pop up will state "No bisect automatically started".
>
> Bug: chromium:1134978
> Change-Id: Ibcfed5c22cc3a3db709460ce436e384436a31ebb
> Reviewed-on: https://chromium-review.googlesource.com/c/catapult/+/2448453
> Auto-Submit: Jeremy Leconte <jleconte@google.com>
> Commit-Queue: Mirko Bonadei <mbonadei@chromium.org>
> Reviewed-by: Mirko Bonadei <mbonadei@chromium.org>

Bug: chromium:1134978
Change-Id: Id20332a00b437d9cee0bfc557b52d836820e28cc

--- a/dashboard/dashboard/elements/triage-dialog.html
+++ b/dashboard/dashboard/elements/triage-dialog.html
@@ -121,7 +121,7 @@ on an alert, or clicks on a "triage" button on the alerts page. It allows the
                target="_blank">
                {{lastSubmittedProjectId}}:{{lastSubmittedBugId}}
             </a> created/updated.
-        <template is="dom-if" if="{{!!lastSubmittedTryJobId}}">
+        <template is="dom-if" if="{{lastSubmittedTryJobId.toString()}}">
           Bisect job <a href="{{lastSubmittedTryJobUrl}}"
                         target="_blank">{{lastSubmittedTryJobId}}</a> started.
         </template>
