[pinpoint] Support Monorail projects in UI
When creating Pinpoint jobs, we should allow users to provide the
Monorail project ID. In the back-end, we should also better honour the
lack/presence of these project ids.

R=abennetts@google.com, fancl@chromium.org

Bug: chromium:1111450
Change-Id: I1205e2caaf1e3a8fee617b30017aecbe19e80387

--- a/dashboard/dashboard/pinpoint/elements/jobs-page/new-job-fab.html
+++ b/dashboard/dashboard/pinpoint/elements/jobs-page/new-job-fab.html
@@ -260,7 +260,7 @@ found in the LICENSE file.
             <template is="dom-if" if="[[isBisectJob(comparisonMode)]]">
               <paper-input name="pin" value="[[job.arguments.pin]]" label="Patch to apply (Gerrit URL)"></paper-input>
             </template>
-
+            <paper-input name="project" value="{{project}}" label="Monorail Project"></paper-input>
             <paper-input name="bug_id" value="{{bug_id}}" label="Bug ID"></paper-input>
 
             <paper-checkbox name="experimental_execution_engine">
@@ -291,6 +291,10 @@ found in the LICENSE file.
         benchmarkConfigLoading: {
           type: Boolean,
           value: false
+        },
+        project: {
+          type: String,
+          value: 'chromium'
         },
         bug_id: String,
         chart: String,
