Show Capture Mode in NetLog Import view
NetLog captures now contain information about the sensitivity level
used when creating the capture. Show this information on the Import
view to enable users to more quickly reject logs not captured at the
necessary level.

Bug: chromium:1057773
Change-Id: Idd21e1979b96e3351799e0c2fa956f57e885cd11

--- a/netlog_viewer/netlog_viewer/import_view.html
+++ b/netlog_viewer/netlog_viewer/import_view.html
@@ -6,13 +6,17 @@
           <input type=file value="Load log from file" id=import-view-load-log-file accept=".json">
           <pre id=import-view-load-status-text></pre>
       </div>
- 
+
       <div id=import-view-loaded-div style="display: none">
         <h2>Data Loaded</h2>
         <table class=styled-table>
         <tr>
           <th>Export date</th>
           <td id=import-view-numericDate></td>
+        </tr>
+        <tr>
+          <th>Capture Mode</th>
+          <td id=import-view-capture-mode></td>
         </tr>
         <tr>
           <th>Build</th>
